2007-04-15  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/cairo/context.rb, src/lib/cairo/context/blur.rb: added
	Cairo::Context#pseudo_blur.

	* samples/blur.rb: added a sample script for Cairo::Context#pseudo_blur.

	* src/rb_cairo_context.c
	(cr_pop_group): returned pattern.
	(cr_push_group): returned popped pattern if not pop_to_source.

2007-04-13  Kouhei Sutou  <kou@cozmixng.org>

	* Rakefile: supported 'rake release'.

	* extconf.rb, Rakefile: supported RubyGems.

2007-04-08  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_surface.c (yield_and_finish):
	- renamed from ensure_finish_proc().
	- don't use ensure.

	* src/rb_cairo_surface.c (ensure_finish_proc): supported
	Cairo::Surface.new with block. If block is exited, a surface is
	finished automatically.

	* sample/*.rb: followed the above change.

2007-03-10  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo.c (Cairo::BINDINGS_VERSION): 1.4.1 -> 1.6.0.

2007-03-10  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: added 1.4.1 entry.

	* pkg-config.rb: re-added.

	* src/rb_cairo.c (Cairo::BINDINGS_VERSION): 1.6.0 -> 1.4.1 for
	releasing 1.4.1.

2007-03-06  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo.c (Cairo::BINDINGS_VERSION): 1.4.0 -> 1.6.0.

	* dist.sh: added release script.

	* NEWS: added 1.4.0 entry.

	* src/rb_cairo_context.c (cr_get_scaled_font): checked cairo
	version.

	* setup.rb: removed dependency on setup.rb. used Ruby-GNOME2
	style.

	* extconf.rb: moved from packages/cairo/ext/.

	* packages/cairo/ext: move to ...
	* src/: ... here.

	* packages/cairo/lib: move to ...
	* src/lib: ... here.

	* README, samples/: followed the changes.

2007-03-03  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_context.c: supported cairo 1.3.16.

	* packages/cairo/ext/rb_cairo.h: cleanup.

	* packages/cairo/ext/rb_cairo_scaled_font.c
	(rb_cairo_scaled_font_to_ruby_object): fixed a conversion bug.

	* packages/cairo/ext/rb_cairo_constants.c
	(Cairo::SURFACE_TYPE_OS2): added.
