@@ -1,5 +1,7 @@
 2007-04-15  Kouhei Sutou  <kou@cozmixng.org>
 
+	* src/rb_cairo_context.c (cr_push_group): added error handling.
+
 	* src/lib/cairo/context.rb, src/lib/cairo/context/blur.rb: added
 	Cairo::Context#pseudo_blur.
 
